# Examen-de-Programaci-n-C-

./: CMakeLists.txt  README.md  main.cpp  main.h
EJERCICIO 1/: identificador.cpp  identificador.h
EJERCICIO 2/: semanas.cpp  semanas.h
EJERCICIO 3/: PromedioNotas.cpp  PromedioNotas.h
EJERCICIO 4/: Promoción3por2.cpp  Promoción3por2.h
